# sitios-historicos-app

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  main.py
admin/: .dockerignore  .env.example  .flaskenv  .gitignore  README.md  dockerfile  main.py  pyproject.toml
admin/src/core/: database.py  seeds.py  seeds_roles.py
admin/src/core/models/: __init__.py  auth.py  favorites.py  feature_flags.py  feature_flags_history.py  reviews.py  site_history.py  site_images.py  sites.py  sitios.py  tags.py  user.py  userrole.py
admin/src/core/services/: __init__.py  auth_roles.py  auth_service.py  favorite_service.py  site_history.py  sites_services.py
admin/src/core/validations/: reviews.py
admin/src/web/: __init__.py  config.py  helpers.py  storage.py
admin/src/web/api/: auth.py  site_images.py  sites.py  tags.py
admin/src/web/controllers/: adminpanel.py  feature_flags.py  login.py  logout.py  reviews.py  sites.py  tags.py
admin/src/web/controllers/validators/: review_validator.py  site_validator.py
admin/src/web/decorators/: loginrequired.py  permissionrequired.py
admin/src/web/handlers/: error.py
admin/src/web/templates/: adminpanel.html  createuser.html  createuserform.html  edituser.html  error.html  home.html  layout.html  login.html  mantenimiento.html  searchuser.html  under_maintenance.html  userform.html  users_layout.html
admin/src/web/templates/feature_flags/: feature_flags.html
admin/static/: error.css  styles.css
admin/static/css/: error.css  feature_flags.css  sites.css  styles.css
admin/tests/: test_home.py
(+63 files in other folders)
