[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Garcia Herd",email = "diegogarciaherd@hotmail.com.ar"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]

[tool.poetry]
packages = [{include = "web", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
